# bapi

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml  docker.yml  lint_python.yml
server-conf/: bapi_uwsgi.ini
src/: wsgi.py
src/app/: __init__.py  cfg.py  db.py  schemas.py  util.py
src/app/config/: api.yml  servers.yml
src/app/modules/bans/: controllers.py
src/app/modules/general/: controllers.py
src/app/modules/patreon/: controllers.py
src/app/modules/stats/: controllers.py
src/app/resources/: bans.py  general.py  library.py  patreon.py  stats.py
src/bapi/: __init__.py  cfg.py  db.py  schemas.py  util.py
src/bapi/blueprints/: discord.py
src/bapi/config/: api.yml
src/bapi/resources/: bans.py  discord.py  general.py  library.py  patreon.py  stats.py
src/bapi/templates/: base.html  token.html
