[tool.poetry]
name = "bapi"
version = "2.0"
description = "BeeStation public api"
authors = ["Qwertyquerty", "Crossedfall"]
license = "APACHE"
readme = "readme.md"
repository = "https://github.com/BeeStation/bapi"
packages = [{include = "bapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "~=5.3.0"
elastic-apm = {version = "~=6.16.1", extras = ["flask"]}
requests = "~=2.31.0"
mysqlclient = "~=2.1.1"
patreon = {git = "https://github.com/Patreon/patreon-python.git", rev = "80c83f0"}
PyYAML = "~=6.0"
Flask = "~=2.2.5"
flask-apispec = "~=0.11.0"
flask-marshmallow = "~=0.14.0"
flask-swagger-ui = "~=4.11.1"
Flask-Cors = "~=3.0.10"
Flask-RESTful = "~=0.3.9"
Flask-SQLAlchemy = "~=3.0.3"
uWSGI = "~=2.0.21"
werkzeug = "~=2.3.8"
marshmallow-sqlalchemy = "~=0.26.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.1"
codespell = "^2.2.4"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.codespell]
count = ""
skip = ".git,.venv,*.lock,.mypy_cache"
builtin = "clear,rare,code,en-GB_to_en-US"
ignore-words-list = "od,ro"
quiet = 3

[tool.mypy]
mypy_path = "bapi"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "bapi.db"
disable_error_code = "name-defined"
